# Sonicity

./: .prettierrc.cjs  LICENSE  README.md  app-config.json  index.html  main.js  package-lock.json  package.json  sounds-config.json  sounds.js  styles.css  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts  style.css  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/stores/: preferences.ts
