[package]
name = "soundboard-app"
version = "0.0.1"
description = "A Soundboard App built using Tauri-Svelte"
authors = ["Bernard-Borg"]
license = "GNU GPLv3"
repository = "https://github.com/Bernard-Borg/SoundboardApp"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = ["dialog-all", "fs-all", "path-all", "protocol-asset", "shell-open"] }
device_query = "1.1.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
